--- a/react-first/src/App.css
+++ b/react-first/src/App.css
@@ -6,6 +6,29 @@
 	color: red;
 }
 
+.App button {
+    background-color: green;
+    font: inherit;
+    color: white;
+    border: 1px solid blue;
+    padding: 16px;
+    cursor: pointer;
+}
+
+.App button:hover {
+	background-color: lightgreen;
+	color: black;
+}
+
+.App button.Red {
+	background-color: red;
+}
+
+.App button.Red:hover {
+	background-color: salmon;
+	color: black;
+}
+
 .bold{
 	font-weight: bold;
 }
