--- a/react-first/src/Person/Person.css
+++ b/react-first/src/Person/Person.css
@@ -3,5 +3,11 @@
 	border: 5px solid #eee;
 	padding: 20px;
 	text-align: center;
-	width: 20%;
+	width: 60%;
+}
+
+@media (min-width: 600px){
+	.Person{
+		width: 450px;
+	}
 }
